# esoinn

GUI/: GUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
creator_images/: CMakeLists.txt  main.cpp
images/: clone_images.py  converter.py  csv_creator.py
opencv_my_example/: CMakeLists.txt  main.cpp
